# Prueba-Poetry

how-long/: pyproject.toml
how-long/how_long/: __init__.py  how_log.py
how-long/tests/: test_how_long.py
