[tool.poetry]
name = "how-long"
version = "0.1.0"
description = "Un decorador sencillo para medir el tiempo de ejecución de una función."
authors = ["Jlom-Chess <jlojeda48@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^22.6.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
